fixed wrong color footer in partners

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ h4 {
   color: var(--text-1);
 }
 
-p {
+.p-p {
   color: var(--text-2);
   line-height: 1.5;
 }
